# config_struct

./: .gitignore  .travis.yml  Cargo.toml  DEV.md  DEVELOPMENT.md  LICENSE.md  NOTES.md  README.md  alltests  make_readme  run_tests  test.sh
config_struct/: Cargo.toml  README.md
config_struct/src/: error.rs  format.rs  generation.rs  json_parsing.rs  lib.rs  load_fns.rs  options.rs  parsing.rs  ron_parsing.rs  toml_parsing.rs  validation.rs  value.rs  yaml_parsing.rs
config_struct/tests/: number_size_tests.rs
config_struct_test/: Cargo.toml  build.rs  config.json  config.toml  config.yaml
config_struct_test/src/: lib.rs
config_struct_test/src/config/: mod.rs
config_struct_test/tests/: alternate_config.json  loading_tests.rs
src/: enums.rs  error.rs  files.rs  files_enum.rs  format.rs  generation.rs  json_parsing.rs  lib.rs  load_fns.rs  options.rs  parsing.rs  ron_parsing.rs  structs.rs  toml_parsing.rs  validation.rs  value.rs  yaml_parsing.rs
static_conf/: Cargo.toml
static_conf/src/: lib.rs
static_conf_test/: Cargo.toml  build.rs  config.toml
static_conf_test/src/: config.rs  lib.rs
test_config_struct/: Cargo.toml  README.md  build.rs  config.ron  config.toml  config.yaml  enum.json  enum.ron  enum.toml  enum.yaml
test_config_struct/src/: config.rs  lib.rs
test_config_struct/tests/: example_config.json  loading_tests.rs
tests/: number_size_tests.rs
