[package]
name = "config_struct"
version = "0.1.1"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]
description = "Create structs from config files at build time."
homepage = "https://github.com/mistodon/config_struct"
repository = "https://github.com/mistodon/config_struct"
readme = "README.md"
keywords = ["build", "config", "parsing", "generator"]
categories = ["config", "parsing"]
license = "MIT"


[package.metadata.docs.rs]
all-features = true


[features]
default = []
json-parsing = ["serde_json"]
ron-parsing = ["ron"]
toml-parsing = ["toml"]
yaml-parsing = ["serde_yaml"]


[dependencies]
failure = "~0.1.1"

ron = { version = "~0.1.4", optional = true }
serde_json = { version = "~1.0.8", optional = true }
serde_yaml = { version = "~0.7.3", optional = true }
toml = { version = "~0.4.5", optional = true }
