[package]
name = "config_struct_test"
version = "0.1.0"
authors = ["Pirh"]

[build-dependencies.config_struct]
path = "../config_struct"
features = ["json-parsing", "ron-parsing", "toml-parsing", "yaml-parsing"]

[dev-dependencies]
ron = "~0.1.4"
serde = "~1.0.0"
serde_derive = "~1.0.0"
serde_json = "~1.0.8"
serde_yaml = "~0.7.3"
toml = "~0.4.5"
