[package]
name = "config_struct_test"
version = "0.1.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]

[build-dependencies.config_struct]
path = "../config_struct"
features = ["json-parsing", "ron-parsing", "toml-parsing", "yaml-parsing"]

[dev-dependencies]
ron = "~0.3.0"
serde = "~1.0.70"
serde_derive = "~1.0.70"
serde_json = "~1.0.24"
serde_yaml = "~0.7.5"
toml = "~0.4.6"
